// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test AuthorizationPage component Test renders 'Logout confirmation' when user authenticated 1`] = `
<main>
  <div>
    <h1>
      Logout confirmation
    </h1>
  </div>
  <p>
    You are logged in already. Would you like to keep the same session or login to another account?
  </p>
  <div>
    <button
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "margin": "0 calc(var(--cell-size)/4) 0 0",
        }
      }
    >
      Stay the same
    </button>
    <button
      disabled={false}
      onClick={[Function]}
      style={Object {}}
    >
      Logout anyway
    </button>
  </div>
</main>
`;

exports[`Test AuthorizationPage component Test renders LoginForm when user is not authenticated 1`] = `
<div>
  <div>
    Login
  </div>
</div>
`;

exports[`Test AuthorizationPage component Test renders RegistrationForm when user is not authenticated 1`] = `
<div>
  <div>
    Register
  </div>
</div>
`;

exports[`Test AuthorizationPage component Test shallow render AuthorizationPage component 1`] = `<Connect(ReduxForm) />`;
